// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomToolbarComp render renders with default keypadMode 1`] = `
<MathToolbar
  additionalKeys={Array []}
  allowAnswerBlock={false}
  autoFocus={true}
  classNames={Object {}}
  controlledKeypad={false}
  controlledKeypadMode={true}
  hideDoneButton={false}
  keypadMode="geometry"
  latex="foo"
  noDecimal={false}
  onAnswerBlockAdd={[Function]}
  onChange={[Function]}
  onDone={[Function]}
  onFocus={[Function]}
  showKeypad={true}
/>
`;

exports[`CustomToolbarComp render renders with default keypadMode 2`] = `
<MathToolbar
  additionalKeys={Array []}
  allowAnswerBlock={false}
  autoFocus={true}
  classNames={Object {}}
  controlledKeypad={false}
  controlledKeypadMode={true}
  hideDoneButton={false}
  keypadMode={3}
  latex="foo"
  noDecimal={false}
  onAnswerBlockAdd={[Function]}
  onChange={[Function]}
  onDone={[Function]}
  onFocus={[Function]}
  showKeypad={true}
/>
`;

exports[`CustomToolbarComp render renders without default keypadMode 1`] = `
<MathToolbar
  additionalKeys={Array []}
  allowAnswerBlock={false}
  autoFocus={true}
  classNames={Object {}}
  controlledKeypad={false}
  controlledKeypadMode={true}
  hideDoneButton={false}
  keypadMode="item-authoring"
  latex="foo"
  noDecimal={false}
  onAnswerBlockAdd={[Function]}
  onChange={[Function]}
  onDone={[Function]}
  onFocus={[Function]}
  showKeypad={true}
/>
`;

exports[`CustomToolbarComp render renders without default keypadMode 2`] = `
<MathToolbar
  additionalKeys={Array []}
  allowAnswerBlock={false}
  autoFocus={true}
  classNames={Object {}}
  controlledKeypad={false}
  controlledKeypadMode={true}
  hideDoneButton={false}
  keypadMode={3}
  latex="foo"
  noDecimal={false}
  onAnswerBlockAdd={[Function]}
  onChange={[Function]}
  onDone={[Function]}
  onFocus={[Function]}
  showKeypad={true}
/>
`;
